--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -266,4 +266,8 @@
     <string name="ignore_window_secure_title">Ignore secure window flag</string>
     <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
 
+   <!-- QuickSettings haptic feedback -->
+    <string name="qs_tiles_haptic_feedback_title">Vibrate on touch</string>
+    <string name="qs_tiles_haptic_feedback_summary">Vibrate when touching QS tiles</string>
+
 </resources>
