YASP: Add Haptic Feedback to tiles [2/2]
Reference: https://github.com/Project-Awaken/android_packages_apps_Settings/commit/d47576d9eb9e768c208ff949f9d564d540826383

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -269,4 +269,8 @@
     <!-- Backup Transport selector -->
     <string name="transport_selector_title">Backup Transport</string>
 
+   <!-- QuickSettings haptic feedback -->
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
+
 </resources>
