YASP: Add Haptic Feedback to tiles [2/2]
Reference: https://github.com/Project-Awaken/android_packages_apps_Settings/commit/d47576d9eb9e768c208ff949f9d564d540826383

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -302,4 +302,8 @@
     <string name="lockscreen_shortcut_enforce_title">Single shortcut</string>
     <string name="lockscreen_shortcut_enforce_summary">Enforce chosen shortcut to be the only existing priority\nWill show nothing until the specific chosen shortcut is available</string>
 
+   <!-- QuickSettings haptic feedback -->
+    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
+    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
+
 </resources>
