--- a/res/xml/yaap_settings_misc.xml
+++ b/res/xml/yaap_settings_misc.xml
@@ -25,6 +25,13 @@
         android:summary="@string/advanced_reboot_summary"
         android:defaultValue="false" />
 
+    <!-- Ignore secure window -->
+    <com.yasp.settings.preferences.SecureSettingSwitchPreference
+        android:key="window_ignore_secure"
+        android:title="@string/ignore_window_secure_title"
+        android:summary="@string/ignore_window_secure_summary"
+        android:defaultValue="false"/>
+
     <!-- Volume key cursor control  -->
     <com.yasp.settings.preferences.SystemSettingListPreference
         android:key="volume_key_cursor_control"
