YASP: Add support for window ignore secure [2/2]

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -262,4 +262,8 @@
     <!-- Backup Transport selector -->
     <string name="transport_selector_title">Backup Transport</string>
 
+   <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore secure window flag</string>
+    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
+
 </resources>
