YASP: Add support for window ignore secure

--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -281,4 +281,7 @@
     <string name="volume_panel_haptic_feedback_title">Vibrate on changing volume</string>
     <string name="volume_panel_haptic_feedback_summary">Improves the UX while changing volume</string>
 
+    <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore secure window flag</string>
+    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
 </resources>
