--- a/res/xml/yaap_settings_statusbar.xml
+++ b/res/xml/yaap_settings_statusbar.xml
@@ -25,6 +25,12 @@
         android:fragment="com.yasp.settings.fragments.NetTrafficMonSettings"
         android:defaultValue="false" />
 
+    <!-- Old mobile type icons -->
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+        android:key="use_old_mobiletype"
+        android:title="@string/use_old_mobiletype_title"
+        android:summary="@string/use_old_mobiletype_summary" />
+
     <!-- Double tap to sleep -->
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
