--- a/res/xml/yaap_settings_statusbar.xml
+++ b/res/xml/yaap_settings_statusbar.xml
@@ -25,6 +25,13 @@
         android:fragment="com.yasp.settings.fragments.NetTrafficMonSettings"
         android:defaultValue="false" />
 
+    <!-- 4G icon -->
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+         android:key="show_fourg_icon"
+         android:title="@string/show_fourg_icon_title"
+         android:summary="@string/show_fourg_icon_summary"
+         android:defaultValue="true"/>
+
     <!-- Double tap to sleep -->
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
