--- a/res/xml/yaap_settings_statusbar.xml
+++ b/res/xml/yaap_settings_statusbar.xml
@@ -31,6 +31,13 @@
         android:title="@string/use_old_mobiletype_title"
         android:summary="@string/use_old_mobiletype_summary" />
 
+    <!-- 4G icon -->
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+         android:key="show_fourg_icon"
+         android:title="@string/show_fourg_icon_title"
+         android:summary="@string/show_fourg_icon_summary"
+         android:defaultValue="true"/>
+
     <!-- Double tap to sleep -->
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
