YASP: Option to Display Data Disabled Indicator Icon [2/2]

--- a/res/xml/yaap_settings_statusbar.xml
+++ b/res/xml/yaap_settings_statusbar.xml
@@ -30,7 +30,14 @@
          android:key="show_fourg_icon"
          android:title="@string/show_fourg_icon_title"
          android:summary="@string/show_fourg_icon_summary"
-         android:defaultValue="true"/>
+         android:defaultValue="false"/>
+
+   <!-- Data disabled icon -->
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+         android:key="data_disabled_icon"
+         android:title="@string/data_disabled_icon_title"
+         android:summary="@string/data_disabled_icon_summary"
+         android:defaultValue="false"/>
 
     <!-- Double tap to sleep -->
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
