Fix issue in "YASP: bring back old style mobile data indicators"

--- a/res/xml/yaap_settings_statusbar.xml
+++ b/res/xml/yaap_settings_statusbar.xml
@@ -29,7 +29,8 @@
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
         android:key="use_old_mobiletype"
         android:title="@string/use_old_mobiletype_title"
-        android:summary="@string/use_old_mobiletype_summary" />
+        android:summary="@string/use_old_mobiletype_summary" 
+        android:defaultValue="false" />
 
     <!-- 4G icon -->
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
