--- a/res/xml/yaap_settings_misc.xml
+++ b/res/xml/yaap_settings_misc.xml
@@ -41,6 +41,24 @@
         android:entryValues="@array/volume_key_cursor_control_values"
         android:defaultValue="0" />
 
+    <!-- Bluetooth timeout -->
+   <ListPreference
+        android:key="bluetooth_timeout"
+        android:title="@string/bluetooth_timeout"
+        android:summary="@string/summary_placeholder"
+        android:entries="@array/bluetooth_timeout_entries"
+        android:entryValues="@array/bluetooth_timeout_values"
+        settings:controller="com.android.settings.bluetooth.BluetoothTimeoutPreferenceController"/>
+
+    <!-- Wi-Fi timeout -->
+    <ListPreference
+        android:key="wifi_timeout"
+        android:title="@string/wifi_timeout"
+        android:summary="@string/wifi_timeout_summary"
+        android:entries="@array/wifi_timeout_entries"
+        android:entryValues="@array/wifi_timeout_values"
+        settings:controller="com.android.settings.wifi.WifiTimeoutPreferenceController"/>
+
     <!-- Monet settings -->
     <Preference
         android:key="monet_settings"
