--- a/res/xml/yaap_settings_brightness_slider.xml
+++ b/res/xml/yaap_settings_brightness_slider.xml
@@ -27,4 +27,10 @@
         android:summary="@string/qs_show_auto_brightness_summary"
         android:defaultValue="true" />
 
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+        android:key="brightness_slider_haptic_enabled"
+        android:title="@string/brightness_slider_haptic_title"
+        android:summary="@string/brightness_slider_haptic_summary"
+        android:defaultValue="false"
+        settings:controller="com.yasp.settings.fragments.BrightnessSliderHapticPreferenceController" />
 </PreferenceScreen>
