--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -270,4 +270,8 @@
     <string name="qs_tiles_haptic_feedback_title">Vibrate on touch</string>
     <string name="qs_tiles_haptic_feedback_summary">Vibrate when touching QS tiles</string>
 
+   <!-- Brightness slider haptic -->
+    <string name="brightness_slider_haptic_feedback_title">Vibrate on brightness slider changes</string>
+    <string name="brightness_slider_haptic_feedback_summary">Improves the UX while dragging the brightness slider</string>
+
 </resources>
