--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -293,4 +293,8 @@
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
     <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
 
+   <!-- Brightness slider haptic -->
+    <string name="brightness_slider_haptic_title">Vibrate on brightness slider changes</string>
+    <string name="brightness_slider_haptic_summary">Improves the UX while dragging the brightness slider</string>
+
 </resources>
