--- a/res/xml/yaap_settings_misc.xml
+++ b/res/xml/yaap_settings_misc.xml
@@ -25,6 +25,13 @@
         android:summary="@string/advanced_reboot_summary"
         android:defaultValue="false" />
 
+    <!-- Volume slider haptic -->
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+        android:key="volume_panel_haptic_feedback"
+        android:title="@string/volume_panel_haptic_feedback_title"
+        android:summary="@string/volume_panel_haptic_feedback_summary"
+        android:defaultValue="false" />
+
     <!-- Volume key cursor control  -->
     <com.yasp.settings.preferences.SystemSettingListPreference
         android:key="volume_key_cursor_control"
