--- a/res/values/yaap_strings.xml
+++ b/res/values/yaap_strings.xml
@@ -277,4 +277,8 @@
     <string name="brightness_slider_haptic_title">Vibrate on brightness slider changes</string>
     <string name="brightness_slider_haptic_summary">Improves the UX while dragging the brightness slider</string>
 
+   <!-- Volume slider haptic -->
+    <string name="volume_panel_haptic_feedback_title">Vibrate on changing volume</string>
+    <string name="volume_panel_haptic_feedback_summary">Improves the UX while changing volume</string>
+
 </resources>
