--- a/res/xml/yaap_settings_misc.xml
+++ b/res/xml/yaap_settings_misc.xml
@@ -32,6 +32,13 @@
         android:summary="@string/ignore_window_secure_summary"
         android:defaultValue="false"/>
 
+    <!-- Show clipboard overlay -->
+    <com.yasp.settings.preferences.SecureSettingSwitchPreference
+        android:key="show_clipboard_overlay"
+        android:title="@string/show_clipboard_overlay_title"
+        android:summary="@string/show_clipboard_overlay_summary"
+        android:defaultValue="true"/>
+
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
         android:key="volume_panel_haptic_feedback"
         android:title="@string/volume_panel_haptic_feedback_title"
