--- a/res/xml/yaap_settings_misc.xml
+++ b/res/xml/yaap_settings_misc.xml
@@ -39,10 +39,18 @@
         android:summary="@string/show_clipboard_overlay_summary"
         android:defaultValue="true"/>
 
+    <!-- Volume slider haptic -->
     <com.yasp.settings.preferences.SystemSettingSwitchPreference
         android:key="volume_panel_haptic_feedback"
         android:title="@string/volume_panel_haptic_feedback_title"
         android:summary="@string/volume_panel_haptic_feedback_summary"
+        android:defaultValue="false" />
+
+    <!-- Partial Screenshot -->
+    <com.yasp.settings.preferences.SystemSettingSwitchPreference
+        android:key="click_partial_screenshot"
+        android:title="@string/click_partial_screenshot_title"
+        android:summary="@string/click_partial_screenshot_summary"
         android:defaultValue="false" />
 
     <!-- Volume key cursor control  -->
